apps/python-backend/app/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-backend
  namespace: backend
  labels:
    app.kubernetes.io/name: python-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: python-backend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: python-backend
    spec:
      containers:
        - name: backend
          image: viet2212/pythonbacken:1.0
          ports:
            - containerPort: 8000
